Criando Bloco de Stack Layout

--- a/store/blocks/pagina2/home/pagina2.jsonc
+++ b/store/blocks/pagina2/home/pagina2.jsonc
@@ -8,7 +8,8 @@
       "flex-layout.row",
       "slider-layout#home",
       // "tab-layout"
-      "list-context.product-list"
+      "list-context.product-list",
+      "stack-layout#cta"
     ]
   },
   "flex-layout.row": {
