alterando alguns estilos globais

--- a/store/blocks/pagina3/home/desktop/info-card.desktop.jsonc
+++ b/store/blocks/pagina3/home/desktop/info-card.desktop.jsonc
@@ -1,4 +1,14 @@
 {
+
+    "rich-text":{
+        "props": {
+            "text": "VTEX Store Framework",
+            "textAlignment": "CENTER",
+            "textPosition": "CENTER",
+            "font": "t-heading-1"
+        }
+    },
+
     "info-card#clearance": {
         "props": {
           "id": "info-card-clearance",
