--- a/store/blocks/pagina3/paniga3.jsonc
+++ b/store/blocks/pagina3/paniga3.jsonc
@@ -1,6 +1,7 @@
 {
     "store.custom#terceirapagina": {
         "blocks": [
+            "rich-text",
             "info-card#clearance",
             "info-card#vintage"
         ]
